--- a/src/index.html
+++ b/src/index.html
@@ -16,34 +16,35 @@
       <h1>Wo / Was essen wir denn heute?</h1>
     </header>
     <h2>Kategorien - Filter</h2>
-    <section>
-      <div>Alles</div>
-      <div>Burger</div>
-      <div>Pizza/Pasta</div>
-      <div>Asiatisch</div>
-      <div>Hausmannskost</div>
-      <div>Sonstiges</div>
+    <section class="filter-container">
+      <div class="category">Alles</div>
+      <div class="category">Burger</div>
+      <div class="category">Pizza/Pasta</div>
+      <div class="category">Asiatisch</div>
+      <div class="category">Hausmannskost</div>
+      <div class="category">Sonstiges</div>
     </section>
     <h2>Entfernung</h2>
-    <section>
-      <div>Egal</div>
-      <div>Nicht so weit weg</div>
-      <div>ganz nah dran</div>
+    <section class="filter-container">
+      <div class="distance">Egal</div>
+      <div class="distance">Nicht so weit weg</div>
+      <div class="distance">ganz nah dran</div>
     </section>
     <h2>Preis</h2>
-    <section>
-      <div>Egal</div>
-      <div>Nicht zu viel</div>
-      <div>Ende des Monats</div>
+    <section class="filter-container">
+      <div class="price">Egal</div>
+      <div class="price">Nicht zu viel</div>
+      <div class="price">Ende des Monats</div>
     </section>
     <h2>Veggietauglich</h2>
-    <section>
-      <div>Egal</div>
-      <div>Sollte schon schmecken</div>
-      <div>Muss ganz lecker sein</div>
+    <section class="filter-container">
+      <div class="veggie">Egal</div>
+      <div class="veggie">Sollte schon schmecken</div>
+      <div class="veggie">Muss ganz lecker sein</div>
     </section>
     <h2>Ergebnisse</h2>
-    <button>Reset</button>
-    <button>Randomize</button>
+    <ul class="results"></ul>
+    <button class="reset-button">Reset</button>
+    <button class="randomize-button">Randomize</button>
   </body>
 </html>
