Add selected class to selected filter

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <header>
       <h1>Wo / Was essen wir denn heute?</h1>
     </header>
-    <h2>Kategorien - Filter</h2>
+    <h2>Kategorie</h2>
     <section class="filter-container">
       <div class="category" data-value="Alles">Alles</div>
       <div class="category" data-value="Burger">Burger</div>
