Change saveFilter function to remove duplicated code

--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,12 @@
     <h2>Veggietauglich</h2>
     <section class="filter-container">
       <div class="veggie" data-value="*">Egal</div>
-      <div class="veggie" data-value="**">Sollte schon schmecken</div>
-      <div class="veggie" data-value="***">Muss ganz lecker sein</div>
+      <div class="veggie" data-value="**">
+        Sollte schon schmecken
+      </div>
+      <div class="veggie" data-value="***">
+        Muss ganz lecker sein
+      </div>
     </section>
     <h2>Ergebnisse</h2>
     <ul class="results"></ul>
