Show randomize button only when all four categories are selected

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,6 @@
     <h2>Ergebnisse</h2>
     <ul class="results"></ul>
     <button class="reset-button">Reset</button>
-    <button class="randomize-button">Randomize</button>
+    <button class="randomize-button hidden">Randomize</button>
   </body>
 </html>
